Attempted to fix spacing issues above "my shop" title (profile)

--- a/_working_files/page_templates/css/main.css
+++ b/_working_files/page_templates/css/main.css
@@ -685,10 +685,10 @@ header {
   line-height: 1.3em;
 }
 
-.name{
+.name {
   margin-top: 2em;
   font-weight: 500;
-  font-size: 0.7;
+  font-size: 1.2rem;
 }
 
 .edit {
